--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="btn">7</button>
                     <button class="btn">8</button>
                     <button class="btn">9</button>
-                    <button onclick="div()">÷</button>
+                    <button onclick="operan('/')">÷</button>
                 </div>
 
                 <div class="row">
@@ -40,7 +40,7 @@
                     <button class="btn">4</button>
                     <button class="btn">5</button>
                     <button class="btn">6</button>
-                    <button onclick="multiply()">×</button>
+                    <button onclick="operan('*')">×</button>
                 </div>
 
                 <div class="row">
@@ -49,7 +49,7 @@
                     <button class="btn">1</button>
                     <button class="btn">2</button>
                     <button class="btn">3</button>
-                    <button onclick="min()">-</button>
+                    <button onclick="operan('-')">-</button>
                 </div>
 
                 <div class="row">
@@ -58,7 +58,7 @@
                     <button class="btn">0</button>
                     <button class="btn">.</button>
                     <button id="eval" onclick="screen.value=eval(screen.value)">=</button>
-                    <button onclick="plus()">+</button>
+                    <button onclick="operan('+')">+</button>
                 </div>
             </div>
         </div>
