--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <button onclick="e()">e</button>
                     <button onclick="pow()">x <span style="position: relative; bottom: .4em; right: .1em;">2</span> </button>
                     <button class="btn">0</button>
-                    <button class="btn">.</button>
+                    <button onclick="operan('.')">.</button>
                     <button id="eval" onclick="screen.value=eval(screen.value)">=</button>
                     <button onclick="operan('+')">+</button>
                 </div>
